prod/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-react-app
  namespace: prod
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: mi-react-app
  template:
    metadata:
      labels:
        app: mi-react-app
        vers: "3"
    spec:
      containers:
        - name: frontend
          image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-prod:frontend-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-secret
