prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-api
  namespace: prod
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-api
  template:
    metadata:
      labels:
        app: chatbot-api
        vers: "13"
    spec:
      containers:
      - name: chatbot-api
        image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-prod:chatbot-api-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: ecr-secret
