prod/deployment_landing_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-be
  namespace: prod
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: landing-be
  template:
    metadata:
      labels:
        app: landing-be
        vers: "3"
    spec:
      containers:
        - name: landing-be
          image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-prod:landing-page-be-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-db
  namespace: prod
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: landing-db
  template:
    metadata:
      labels:
        app: landing-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: landing-db
  namespace: prod
spec:
  selector:
    app: landing-db
  ports:
    - port: 5432
      targetPort: 5432

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: landing-db-pvc-test
#   namespace: dev
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 25Gi
#   storageClassName: gp2
