prod/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-react-app
  namespace: prod
spec:
  selector:
    app: mi-react-app
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
  type: ClusterIP
